--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     async function enviarPrompt() {
       const comando = document.getElementById("comando").value;
 
-      const resposta = await fetch("https://SEU_WEBHOOK_DO_N8N.webhook", {
+      const resposta = await fetch("https://dinastia-n8n-editor.wuqbfk.easypanel.host/webhook-test/79d68e4b-0319-4d2c-a960-1ce575f76dc9", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ chatInput: comando })
